# cpp-vision-pipeline-2025

./: .gitignore  CMakeLists.txt  README.md  latency.csv
.github/workflows/: ci.yml
cmake/: FindDoctest.cmake
config/: default.yaml
include/cvp/: frame.hpp  logger.hpp  metrics.hpp  pipeline.hpp  postprocess.hpp  preprocess.hpp  tracer.hpp
src/: main.cpp
src/modules/postprocess/: nms.cpp
src/modules/preprocess/: basic_preprocess.cpp
tests/integration/: test_e2e_smoke.cpp
tests/perf/: run_perf.sh
tests/unit/: test_math_iou.cpp  test_nms.cpp  test_preprocess.cpp
tools/: plot_latency.py
